provarAnt/00D1b0000000d5bEAA/objects/User.object
<CustomObject>
    <fields>
        <fullName>Assigned_SC__c</fullName>
        <description>the assigned service consultant for the advertising consultant</description>
        <label>Assigned SC</label>
        <relationshipName>Service_Consultant</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Avaya_ID__c</fullName>
        <description>ATC call center agent Avaya ID</description>
        <label>Avaya ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <description>Department code from HR system - ties to department name</description>
        <label>Department Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <picklist>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_User_ID__c</fullName>
        <formula>Id &amp;
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp;
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp;
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <label>Full User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this person should be considered a trainer. Can be used in reports so we don&apos;t have to set user to a specific role, profile, title, etc.</description>
        <inlineHelpText>Check if this person should be considered a trainer. Can be used in reports so we don&apos;t have to set user to a specific role, profile, title, etc.</inlineHelpText>
        <label>Is Trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <description>Job code from HR system - maps to a title</description>
        <label>Job Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Expiration__c</fullName>
        <description>Will be used to keep track of the user accounts that are temporary and will need to expire at a set time. I.E. Project Mangers, Trainers etc..</description>
        <label>Login Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loop__LOOPlus_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will allow this user to run LOOPlus on a staging environment when testing is available. When enabled, the LOOPlus page will take slightly longer to load.</inlineHelpText>
        <label>DDP Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsPassword__c</fullName>
        <label>DocuSign Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsToken__c</fullName>
        <label>DocuSign API UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_ID_Length__c</fullName>
        <description>returns the length of the net id</description>
        <formula>LEN(Net_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net ID Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_ID__c</fullName>
        <description>Network ID of User. Used to map ATC contacts.</description>
        <inlineHelpText>Network ID of User.</inlineHelpText>
        <label>Net ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OnMyTeam_Same_Manager__c</fullName>
        <description>Utility field to determine if the logged in user reports to the same manager.</description>
        <formula>/*Matches to users with the same managers*/
IF( ManagerId  =  $User.ManagerId, &quot;Yes&quot;, &quot;No&quot;)


/*Still need to see if we can match against a Manager&apos;s manager so that we can see all the way down the hierarchy*/
/*Is there any advantage to doing this matching against Role Hierarchy instead?We&apos;d need to look at how to determine role hierarchy name i.e. If they are part of Division 39*/</formula>
        <label>OnMyTeam - Same Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnMyTeam_Subordinate__c</fullName>
        <description>Checks to see if this user is in this the currently logged in user&apos;s managerial hierarchy.</description>
        <formula>/* Matches to Managers looking at users  */
IF( 
  OR (
   Manager.Full_Name__c = $User.Full_Name__c,
   Manager.Manager.Full_Name__c = $User.Full_Name__c,
   Manager.Manager.Manager.Full_Name__c = $User.Full_Name__c,
   Manager.Manager.Manager.Manager.Full_Name__c = $User.Full_Name__c,
   Manager.Manager.Manager.Manager.Manager.Full_Name__c = $User.Full_Name__c,
   Manager.Manager.Manager.Manager.Manager.Manager.Full_Name__c = $User.Full_Name__c,
   Manager.Manager.Manager.Manager.Manager.Manager.Manager.Full_Name__c = $User.Full_Name__c, 
   Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Full_Name__c = $User.Full_Name__c
   ),
 &quot;Yes&quot;,
 &quot;No&quot;
)</formula>
        <label>OnMyTeam - Subordinate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pod_Group__c</fullName>
        <label>Pod Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>73</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <formula>Manager.FirstName &amp;&quot; &quot;&amp; Manager.LastName</formula>
        <inlineHelpText>formula field that reads the manager field from the user profile for reporting</inlineHelpText>
        <label>Reports To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_User__c</fullName>
        <formula>IF(Profile.Name = &apos;ATC Service User&apos;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Worker_ID__c</fullName>
        <description>copy of the Federation ID. Will be maintained by a trigger</description>
        <label>Worker ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that others in this Salesforce organization can send EchoSign agreements on behalf of this user.</description>
        <inlineHelpText>Check this box so that others in this Salesforce organization can send EchoSign agreements on behalf of this user.</inlineHelpText>
        <label>EchoSign - Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</inlineHelpText>
        <label>EchoSign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <formula>MID(Email,FIND(&quot;@&quot;,Email),LEN(Email))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marking Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ATC_DOF_Sales_Users</fullName>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>Job_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>ATC DOF Sales User</value>
        </filters>
        <label>ATC DOF Sales Users</label>
        <sharedTo>
            <group>COE_Admins</group>
            <group>DOF_Team</group>
            <role>Desktop_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Blank_Roles</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ATC Sales User,ATG Chatter Only User,Chatter Free User,Chatter Only User</value>
        </filters>
        <label>Active Blank Roles</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Service_Users</fullName>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Service</value>
        </filters>
        <label>All Active Service Users</label>
        <sharedTo>
            <group>COE_Admins</group>
            <role>Desktop_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Users</fullName>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Users</label>
        <sharedTo>
            <role>Desktop_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chatter_Free_Users_All_Active</fullName>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Chatter Free User</value>
        </filters>
        <label>Chatter Free Users - All Active</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Chatter_Free_Users_New</fullName>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Chatter Free User</value>
        </filters>
        <filters>
            <field>Full_Name__c</field>
            <operation>notContain</operation>
            <value>integration,chatter</value>
        </filters>
        <label>Chatter Free Users - New</label>
        <sharedTo>
            <role>Desktop_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DSC_Users</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>License_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>DSC</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>DSC</value>
        </filters>
        <label>DSC Users</label>
        <sharedTo>
            <group>COE_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Frozen_Users</fullName>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Frozen Users</label>
        <sharedTo>
            <role>Desktop_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Haystak_Active</fullName>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>@haystak</value>
        </filters>
        <label>Haystak Active</label>
        <sharedTo>
            <group>COE_Admins</group>
            <role>Desktop_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Integration_Users</fullName>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>License_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Integration</value>
        </filters>
        <label>Integration Users</label>
        <sharedTo>
            <group>COE_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Profile_Business_Admin</fullName>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>business</value>
        </filters>
        <label>Profile - Business Admin</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Role_Business_Managers</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>District__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>business</value>
        </filters>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>contains</operation>
            <value>business</value>
        </filters>
        <label>Role - Business Managers</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Role_Performance_Managers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>performance</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Role - Performance Managers</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Role_Product_Specialists</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Product Specialist</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Role - Product Specialists</label>
        <sharedTo/>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BU_is_Required</fullName>
        <active>false</active>
        <description>New users need to have their Business Unit entered.</description>
        <errorConditionFormula>ISBLANK( Division )</errorConditionFormula>
        <errorDisplayField>Division</errorDisplayField>
        <errorMessage>Please enter the Business Unit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Create_Accounts</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), 
NOT( $User.ProfileId = &apos;00eE0000000MrM7&apos;))</errorConditionFormula>
        <errorMessage>Please contact your system administrator to create a user</errorMessage>
    </validationRules>
</CustomObject>